--- a/config.env
+++ b/config.env
@@ -12,3 +12,5 @@ CLOUDINARY_API_SECRET=ZbE3TRLMrtC_IKgw1jCsRZ2VSLw
 CLOUDINARY_API_KEY=126832147298192
 CLOUDINARY_ENVIROMENT_VARIABLE=cloudinary://126832147298192:ZbE3TRLMrtC_IKgw1jCsRZ2VSLw@djldlfhm1
 CLOUDINARY_NAME=djldlfhm1
+
+cloudinary://126832147298192:ZbE3TRLMrtC_IKgw1jCsRZ2VSLw@djldlfhm1
