--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 PORT=3003
-NODE_ENV=production
+NODE_ENV=development
 USERNAME_OLD=pioneerAdmin
 USERNAME =pioneerStudentAdmin
 PASSWORD_OLD = pioneerStudents2003
